May have gotten sidetracked...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\cma726\\.virtualenvs\\Pectin-mrfC-Z06\\Scripts\\python.exe"
+    "python.pythonPath": "/home/wlake/.local/share/virtualenvs/pectin-ZgFuqcra/bin/python"
 }
